Avoid header overflows on narrow display in most instance

--- a/_sass/10_layout.scss
+++ b/_sass/10_layout.scss
@@ -99,6 +99,29 @@
         }
     }
 }
+@media (max-width: 400px) {
+    #city-box {
+        display: none;
+    }
+}
+@media (max-width: 700px) {
+    .site-title,
+    #header-map,
+    .overmap {
+        height: 80px;
+    }
+    .site-title {
+        width: 80px;
+    }
+    .site-title .id {
+        font-size: 45px;
+        line-height: 37px;
+    }
+    .site-title .blog {
+        font-size: 20px;
+        line-height: 27px;
+    }
+}
 
 
 /**
